# domrf_test

./: .gitignore  README.MD  Task.html  Task.md  docker-compose.yml
notebooks/: domrf_test.ipynb
server/: .env.example  Dockerfile-fastapi  main.py  pyproject.toml  requirements.txt
serverfull/: .env.example  .gitignore  Dockerfile-mkdocs  docker-compose.yml  pyproject.toml
